# natter

./: .creds-rds  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  flake.nix  flake.nix+  openapi_letta.json  openapi_openai.json  pyproject.toml  requirements.txt  setup.py
app/: aip.py  ami.py  chat.py  csv2db.py  letta.sh  nat.py  text.py
etc/: api-test.json  cert.pem  conversation-member-and-friend.csv  conversation-member-and-friend.eml  key.pem  sns-test.json
etc/nixos/: configuration.nix
flagged/: log.csv
src/: aip.py  api_key.py  chat.py  gunicorn.conf.py
src/model/: __init__.py  aws.py  chat.py  db.py  db.sql  globals.py  letta.py  pong.py  prompt.py  text.py  user.py
static/: index.html  index.js
static/css/: index.css  storybook.css
template/: index.html
