[project]
name = "aip" 
dynamic = ["dependencies"]
license = { text = "BSD 3-Clause License" }
version = "0.1"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
id where = ["src"]

